# aws-enterprise-risk-intelligence-platform

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: aws_architecture_mapping.yaml  data_config.yaml  feature_config.yaml  model_config.yaml  monitoring_config.yaml
docs/: anomaly_detection_design.md  aws_architecture_summary.md  churn_model_design.md  data_dictionary.md  evidence_index.md  experimentation_design.md  feature_engineering_design.md  fraud_model_design.md  inference_design.md  interview_talking_points.md  monitoring_design.md  portfolio_readiness_checklist.md  synthetic_data_design.md
outputs/: ab_test_results.json  anomaly_detection_summary.json  anomaly_scores.csv  batch_risk_scores.csv  champion_challenger_comparison.json  churn_model_metrics.json  churn_predictions.csv  data_drift_report.csv  feature_summary.json  fraud_model_metrics.json  fraud_predictions.csv  model_health_summary.json  pre_post_intervention_analysis.json  prediction_monitoring_summary.json  realtime_scoring_responses.json  root_cause_analysis.csv
reports/: anomaly_detection_report.md  batch_inference_report.md  champion_challenger_report.md  churn_model_report.md  data_validation_report.md  eda_summary_report.md  experiment_impact_report.md  feature_engineering_report.md  final_project_report.md  fraud_model_report.md  model_health_report.md  monitoring_report.md  realtime_inference_simulation_report.md  root_cause_analysis_report.md
tests/: test_anomaly_detector.py  test_churn_model.py  test_data_validator.py  test_experimentation.py  test_feature_builder.py  (+5 more)
(+37 files in other folders)
